--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,8 @@ a:hover{text-decoration:underline;}
 .fix{overflow:hidden;}
 
 #wrapper{
-	width:1920px;
+	max-width:1920px;
+	width:100%;
 }
 #header {
 	height: 600px;
